--- a/index.html
+++ b/index.html
@@ -23,12 +23,13 @@
             </div>
             <nav class="topnav">
                 <ul>
-                    <li><a href="#home">Home</a></li>
-                    <li><a href="#contact">Sobre mi</a></li>
-                    <li><a href="#habilidades">Skills</a></li>                    <li><a href="#formaciones">Formaciones y Cursos</a></li>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#about">Sobre mi</a></li>
+                    <li><a href="#skills">Habilidades</a></li>                    
                     <li><a href="#hobbies">Hobbies</a></li>
-                    <li><a href="#formacion">Formación</a></li>
-                    <li><a href="#miemail">guillermotoppph@gmail.com</a></li>
+                    <li><a href="#formacionSector">Formación</a></li>
+                    <li><a href="#experiencia">Experiencia</a></li>
+                    <li><a href="mailto:guillermotoppph@gmail.com">guillermotoppph@gmail.com</a></li>
                 </ul>
             </nav>
         </div>
@@ -44,10 +45,10 @@
                 </p>
                 <nav class="linksExternos">
                     <ul>
-                        <li><a href="https://github.com/tu_usuario_github">GitHub</a></li>
-                        <li><a href="https://linkedin.com/in/tu_perfil_linkedin">LinkedIn</a></li>
-                        <li><a href="https://instagram.com/tu_perfil_instagram">Instagram</a></li>
-                        <li><a href="https://facebook.com/tu_perfil_facebook">Facebook</a></li>
+                        <li><a href="https://github.com/Guillermotopp">GitHub</a></li>
+                        <li><a href="https://www.linkedin.com/in/guillermotopp/">LinkedIn</a></li>
+                        <li><a href="https://www.instagram.com/guillermotopp/">Instagram</a></li>
+                        <li><a href="https://www.facebook.com/fotografoguillermotopp">Facebook</a></li>
                     </ul>
                 </nav>
             </div>
