--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Lilita+One&family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Rubik+Gemstones&display=swap" rel="stylesheet">
-    
+    <link rel="icon" href="./img/miFavicon.ico" type="image/x-icon">
+
     <title>Alura Portfolio Challenge</title>
 </head>
 <body>
@@ -86,29 +87,31 @@
             <div class="tituloSeccion">
                 <h3>Habilidades</h3>
             </div>
-            <div class="habilidad">
-                <img class="imagen1" src="./img/html5.png" alt="imagen del compontente de habilidad de HTML5">
-                <p>HTML5</p>
-            </div>
-            <div class="habilidad">
-                <img class="imagen1" src="./img/js.png" alt="Imagen de un component de habilidades de Javascript">
-                <p>Javascript</p>
-            </div>
-            <div class="habilidad">
-                <img class="imagen1" src="./img/php.png" alt="Imagen de un component de habilidad de PHP">
-                <p>PHP</p>
-            </div>
-            <div class="habilidad">
-                <img class="imagen1" src="./img/react.png" alt="Imagen de un component de habilidad de React">
-                <p>React</p>
-            </div>
-            <div class="habilidad">
-                <img class="imagen1" src="./img/node.png" alt="Imagen de un component de habilidad de Node JS">
-                <p>Node JS</p>
-            </div>
-            <div class="habilidad">
-                <img class="imagen1" src="./img/css.png" alt="Imagen de un component de habilidad de CSS">
-                <p>CSS</p>
+            <div class="habilidadesSkills">
+                <div class="habilidad">
+                    <img class="imagen1" src="./img/html5.png" alt="imagen del compontente de habilidad de HTML5">
+                    <p>HTML5</p>
+                </div>
+                <div class="habilidad">
+                    <img class="imagen1" src="./img/js.png" alt="Imagen de un component de habilidades de Javascript">
+                    <p>Javascript</p>
+                </div>
+                <div class="habilidad">
+                    <img class="imagen1" src="./img/php.png" alt="Imagen de un component de habilidad de PHP">
+                    <p>PHP</p>
+                </div>
+                <div class="habilidad">
+                    <img class="imagen1" src="./img/react.png" alt="Imagen de un component de habilidad de React">
+                    <p>React</p>
+                </div>
+                <div class="habilidad">
+                    <img class="imagen1" src="./img/node.png" alt="Imagen de un component de habilidad de Node JS">
+                    <p>Node JS</p>
+                </div>
+                <div class="habilidad">
+                    <img class="imagen1" src="./img/css.png" alt="Imagen de un component de habilidad de CSS">
+                    <p>CSS</p>
+                </div>
             </div>
         </section>
 
@@ -117,29 +120,31 @@
             <div class="tituloSeccion">
                 <h3>Hobbies</h3>
             </div>
-            <div class="habilidad">
-                <img class="imagen1" src="./img/camera-fill.svg" alt="imagen del compontente de habilidad de HTML5">
-                <p>Fotografía</p>
-            </div>
-            <div class="habilidad">
-                <img class="imagen1" src="./img/music-note-beamed.svg" alt="Imagen de la clave de sol">
-                <p>Componer Música</p>
-            </div>
-            <div class="habilidad">
-                <img class="imagen1" src="./img/person-walking.svg" alt="Imagen de una persona caminando">
-                <p>Trekking</p>
-            </div>
-            <div class="habilidad">
-                <img class="imagen1" src="./img/translate.svg" alt="Imagen universal de un traductor">
-                <p>Idiomas</p>
-            </div>
-            <div class="habilidad">
-                <img class="imagen1" src="./img/book.svg" alt="Imagen de un libro">
-                <p>Leer Libros</p>
-            </div>
-            <div class="habilidad">
-                <img class="imagen1" src="./img/camera-reels-fill.svg" alt="Imagen de una camara de filmación">
-                <p>Cine</p>
+            <div class="habilidades">
+                <div class="habilidad" class="habilidadPrimera">
+                    <img class="imagen1" src="./img/camera-fill.svg" alt="imagen del compontente de habilidad de HTML5">
+                    <p>Fotografía</p>
+                </div>
+                <div class="habilidad">
+                    <img class="imagen1" src="./img/music-note-beamed.svg" alt="Imagen de la clave de sol">
+                    <p>Componer Música</p>
+                </div>
+                <div class="habilidad">
+                    <img class="imagen1" src="./img/person-walking.svg" alt="Imagen de una persona caminando">
+                    <p>Trekking</p>
+                </div>
+                <div class="habilidad">
+                    <img class="imagen1" src="./img/translate.svg" alt="Imagen universal de un traductor">
+                    <p>Idiomas</p>
+                </div>
+                <div class="habilidad">
+                    <img class="imagen1" src="./img/book.svg" alt="Imagen de un libro">
+                    <p>Leer Libros</p>
+                </div>
+                <div class="habilidad">
+                    <img class="imagen1" src="./img/camera-reels-fill.svg" alt="Imagen de una camara de filmación">
+                    <p>Cine</p>
+                </div>
             </div>
         </section>
         <section id="formacionSector">
