Cambio de imagen de Perfil. Version 1.5

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header>
         <div class="encabezadoPrincipal"> 
             <div class="encabezadoPrincipalLogoyTexto"> 
-                <img class="encabezadoPrincipalLogo" src="./img/Logo para mi web.png" alt="Logo principal de la página">
+                <img class="encabezadoPrincipalLogo" src="./img/_MG_2512 - Autoretrato en el Estudio - Guillermo Topp 03.jpg - Autoretrato en el Estudio - Guillermo Topp 03.jpg" alt="Logo principal de la página">
                 <div class="encabezadoPrincipalTexto">
                     <p>Guillermo Topp</p>
                 </div>
