--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
         </section>
         <section id="contacto">
             <div class="contactoIzquierdo">
-                <img class="contactoImagen" src="./img/_MG_2402-1 - Desafio Contacto - Alura Laram.jpg" alt="fotografia de la ciudad de San Miguel de Tucumán, vista desde el cerro San Javier">
+                <img class="contactoImagen" src="./img/paisaje.png" alt="fotografia de la ciudad de San Miguel de Tucumán, vista desde el cerro San Javier">
 
             </div>
             <div class="contactoDerecho">
